# ASL

./: CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.org  CTestConfig.cmake  DefineFunctions.cmake  DefineOptions.cmake  NEWS.md  NEWS.org  README.md  README.org
doc/: CMakeLists.txt
doc/Developer-Guide/: Doxyfile.cmake.in  Doxyfile.in
doc/Developer-Guide/pics/: mainDiagram.dot
doc/Man-Pages/: asl-hardware.1.org
examples/elastic/: CMakeLists.txt  acousticWaves.cc  cubeGravity.cc  cubeIncompressibleGravity.cc  cubePoroelasticGravity.cc  poroelastic.cc
examples/flow/: CMakeLists.txt  bus_wind.cc  compressor.cc  flow.cc  flow2.cc  flow3.cc  flowKDPGrowth.cc  flowRotatingCylinders.cc  locomotive.cc  locomotive_in_tunnel.cc  locomotive_laminar.cc  locomotive_stability.cc  multicomponent_flow.cc  multiphase_flow.cc  pitot_tube_ice.cc
examples/levelSet/: CMakeLists.txt  levelSetBasic.cc  levelSetFacetedGrowth.cc  levelSetFacetedGrowth.ini  levelSetNormalGrowth.cc  parameters_levelSetFacetedGrowth.ini
examples/massTransferSM/: CMakeLists.txt  testSMDiff.cc  testSMDiff3C.cc  testSMPhi.cc  testSMPhiBV.cc
src/: CMakeLists.txt  aslDataInc.cxx  aslDataInc.h  aslGenerators.cxx  aslGenerators.h  aslGeomInc.cxx  aslGeomInc.h  aslUtilities.cxx  aslUtilities.h  doxygenDefinitions.h
src/acl/: CMakeLists.txt  acl.cxx  acl.h  aclElementBase.cxx  aclElementBase.h  aclGenerators.cxx  aclGenerators.h  aclHardware.cxx  aclHardware.h  aclStdIncludes.h  aclTypes.h  aclTypesList.h  aclUtilities.cxx  aclUtilities.h  cl.hpp
src/acl/DataTypes/: aclArray.cxx  aclArray.h  aclConstant.cxx  aclConstant.h  aclGroupID.cxx  aclGroupID.h  aclIndex.cxx  aclIndex.h  aclIndexExt.cxx  aclIndexExt.h  aclLocalArray.cxx  aclLocalArray.h  aclMemBlock.cxx  aclMemBlock.h  aclPrivateArray.cxx  aclPrivateArray.h  aclPrivateVariable.cxx  aclPrivateVariable.h  aclSubvector.cxx  aclSubvector.h  aclVariable.cxx  aclVariable.h  aclVariableReference.cxx  aclVariableReference.h  aclVariableSP.cxx  aclVariableSP.h  acldatatypes.cmake
src/acl/Kernels/: aclExpressionContainer.cxx  aclExpressionContainer.h  aclKernel.cxx  aclKernel.h  aclKernelConfiguration.cxx  aclKernelConfiguration.h  aclKernelConfigurationTemplates.cxx  aclKernelConfigurationTemplates.h  aclKernelMerger.cxx  aclKernelMerger.h  aclkernels.cmake
src/acl/Operators/: CMakeLists.txt  aclElementAssignmentSafe.cxx  aclElementAssignmentSafe.h  aclElementConvert.cxx  aclElementConvert.h  aclElementCos.cxx  aclElementCos.h  aclElementDivision.cxx  aclElementDivision.h  aclElementExcerpt.cxx  aclElementExcerpt.h  aclElementFor.cxx  aclElementFor.h  aclElementGenericBinary.cxx  aclElementGenericBinary.h  aclElementGenericUnary.cxx  aclElementGenericUnary.h  aclElementIfElse.cxx  aclElementIfElse.h  aclElementMad.cxx  aclElementMad.h  aclElementParser.cxx  aclElementParser.h  aclElementProduct.cxx  aclElementProduct.h  aclElementSelect.cxx  aclElementSelect.h  aclElementSin.cxx  aclElementSin.h  aclElementSqrt.cxx  aclElementSqrt.h  aclElementSubtraction.cxx  aclElementSubtraction.h  aclElementSum.cxx  aclElementSum.h  aclElementSyncCopy.cxx  aclElementSyncCopy.h  aclGenericAtomicFunction.cxx  aclGenericAtomicFunction.h  aclOperatorBinary.cxx  (+8 more)
src/acl/aclMath/: CMakeLists.txt  aclBarycentric.cxx  aclBarycentric.h  aclMathAlg.cxx  (+15 more)
src/data/: CMakeLists.txt  aslBlocks.cxx  aslBlocks.h  aslDataUtilities.cxx  aslDataUtilities.h  aslDataWithGhostNodes.cxx  aslDataWithGhostNodes.h  aslDataWrapper.cxx  aslDataWrapper.h  aslMemElement.cxx  aslMemElement.h  aslProbe.cxx  aslProbe.h  asldata.cmake
src/math/: CMakeLists.txt  aslBarycentric.cxx  aslBarycentric.h  aslDistanceFunction.cxx  aslDistanceFunction.h  aslDistanceFunctionAlg.cxx  aslDistanceFunctionAlg.h  aslIndex2Position.cxx  aslIndex2Position.h  aslInterpolation.h  aslMatrices.cxx  aslMatrices.h  aslPositionFunction.cxx  aslPositionFunction.h  aslProbeTemplates.cxx  aslProbeTemplates.h  aslTemplateVE.cxx  aslTemplateVE.h  aslTemplateVEExtras.cxx  aslTemplateVEExtras.h  aslTemplates.cxx  aslTemplates.h  aslTemplatesExtras.cxx  aslTemplatesExtras.h  aslVectors.h  aslVectorsDynamicLength.h  aslVectorsDynamicLengthOperations.h  aslVectorsUtilities.h  aslmath.cmake
src/num/: CMakeLists.txt  aslBCond.cxx  aslBCond.h  aslBasicBC.cxx  aslBasicBC.h  aslBasicBC2.cxx  aslBasicBC2.h  aslCrystalGrowthBC.cxx  aslCrystalGrowthBC.h  aslDFOptimizer.cxx  aslDFOptimizer.h  aslDataResampling.cxx  aslDataResampling.h  aslElasticity.dox  aslFDAdvectionDiffusion.cxx  aslFDAdvectionDiffusion.h  aslFDAdvectionDiffusion2.cxx  aslFDAdvectionDiffusion2.h  aslFDAdvectionDiffusionBC.cxx  aslFDAdvectionDiffusionBC.h  aslFDAdvectionDiffusionInhomogeneous.cxx  aslFDAdvectionDiffusionInhomogeneous.h  aslFDElChemKinetics.cxx  aslFDElChemKinetics.h  aslFDElasticity.cxx  aslFDElasticity.h  aslFDElasticityBC.cxx  aslFDElasticityBC.h  aslFDMultiPhase.cxx  aslFDMultiPhase.h  aslFDPoroElasticity.cxx  aslFDPoroElasticity.h  aslFDPoroElasticityBC.cxx  aslFDPoroElasticityBC.h  aslFDStefanMaxwell.cxx  aslFDStefanMaxwell.h  aslInterfaceTracking.dox  aslInterfaceTrackingAlg1.cxx  aslInterfaceTrackingAlg1.h  aslLBGK.cxx  (+20 more)
src/numExtend/: CMakeLists.txt  aslFDAdvectionDiffusionExtended.cxx  aslFDAdvectionDiffusionExtended.h
src/readers/: aslVTKFormatReaders.cxx  aslVTKFormatReaders.h
src/utilities/: aslGlobalSpace.h  aslMATLABCasters.cxx  aslMATLABCasters.h  aslParametersManager.cxx  aslParametersManager.h  aslSmartPtrUtils.h  aslTimeStamp.cxx  aslTimeStamp.h  aslTimer.h  aslUValue.h  aslVTKCasters.cxx  aslVTKCasters.h  aslVTKDataGenerators.cxx  aslVTKDataGenerators.h
src/writers/: aslABDFormat.cxx  aslABDFormat.h  aslMATFormat.cxx  aslMATFormat.h  aslVTKFormatWriters.cxx  aslVTKFormatWriters.h  aslWriter.cxx  aslWriter.h
test/testACL/: CMakeLists.txt  testHardware.cc  testKernel.cc  testKernelMerger.cc  testMatrixOfElements.cc  testOperators.cc  testPerformance.cc  testPrivateVar.cc  testVectorOfElements.cc
test/testAGL/: CMakeLists.txt  testVTK_IO.cc
test/testMath/: CMakeLists.txt  testASLData.cc  testDistanceFunction.cc  testReductionFunction.cc
(+47 files in other folders)
